Change the monitoring port

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -20,6 +20,7 @@
   "logLevel" : "DEBUG",
   "logToConsole" : false,
   "logFileName" : "~/dvr/kDvrWorker.log",
+  "monitorPort": 4390,
   "regressionAdapter": {
       "enable":false
   },
