infrastructure enhancement for regression tests
The regression adapter is now reading the HLS stream files from the
data warehouse generated by live-testing (the python project under
live-monitoring repository).
Work in progress. Next, enhance the validation to build database of
expected results (getting the HLS stream from the packager) in 1st run
tests cycle (per stream) and compare with results in any following
cycle.

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -21,7 +21,14 @@
   "logToConsole" : true,
   "logFileName" : "~/dvr/kDvrWorker.log",
   "regressionAdapter": {
-      "enable":false
+      "enable": false,
+      "dataWarehouseRootFolderPath" : "~/dvr/tests",
+      "maxChunkCount": 10,
+      "entries" : [{
+            "entryId": "abc",
+            "flavorParamsIds": "32,33,34,35",
+            "serverType": 0
+        }]
   },
   "simulateStreams": {
       "enable":false,
