--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-project-name",
-  "version": "0.1.0",
+  "name": "kLiveController",
+  "version": "1.0.0",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-jshint": "~0.10.0",
@@ -22,7 +22,7 @@
     "curry": "1.2.0",
     "forever": "0.15.2",
     "glob": "7.0.5",
-    "log4js": "0.6.29",
+    "log4js": "0.6.37",
     "m3u8": "git://github.com/eladBenedict/node-m3u8.git#master",
     "mkdirp": "0.5.1",
     "nconf": "0.7.2",
