Ground truth of playing stream from data warehouse ready
The code successfully run regression tests for stream with single
flavour. It reads the chunk lists accessible by the packager, but
doesn’t prepare the validation database yet.
Next step, complete the database and test with all flavours data
warehouse.

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -21,13 +21,15 @@
   "logToConsole" : true,
   "logFileName" : "~/dvr/kDvrWorker.log",
   "regressionAdapter": {
-      "enable":true,
+      "enable":false,
       "dataWarehouseRootFolderPath" : "/Users/lilach.maliniak/Desktop/dev/repositories/live-monitor/live-testing",
       "maxChunkCount": 10,
       "entries" : [{
             "entryId": "abc",
             "flavorParamsIds": "32",
-            "serverType": 0
+            "serverType": 0,
+            "firstChunklistIndex" : 0,
+            "playWindow": 150
         }]
   },
   "simulateStreams": {
