--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "kLiveController",
   "version": "1.0.0",
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/kaltura/liveDVR"
+    },
+  "license": "",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-jshint": "~0.10.0",
