regression test fully implemented and roughly tested for single flavour
The regression test is fully implemented and roughly tested for single
flavour.
Work in progress to support multiple flavors.

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -33,7 +33,7 @@
             "playWindow": 150,
              "validator": {
                "path": "instructions: put here the root path to save and read regression results (e.g. /var/tmp/regression/results)",
-               "override": true,
+               "override": false,
                "history_count": 0
              }
         }]
