fixed bug in config.json.template
mockBackend reverted to false.
plus - regression result file extension changed to .json.

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -1,6 +1,6 @@
 {
   "mockNetwork" : false,
-  "mockBackend" : true,
+  "mockBackend" : false,
   "readMockBackendResponseFromFile" : false,
   "rootFolderPath" : "~/dvr/dvrContentRootPath",
   "oldContentFolderPath" : "~/dvr/dvrOldContentRootPath",
