--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -2,8 +2,8 @@
   "mockNetwork" : false,
   "mockBackend" : false,
   "readMockBackendResponseFromFile" : false,
-  "rootFolderPath" : "~/dvr/dvrContentRootPath",
-  "oldContentFolderPath" : "~/dvr/dvrOldContentRootPath",
+  "rootFolderPath" : "~/kLive_content/live",
+  "oldContentFolderPath" : "~/kLive_content/archive",
   "requestTimeout" : 20000,
   "flavorSuccessPollingInterval" : 2000,
   "flavorFailPollingInterval" : 10000,
@@ -19,7 +19,7 @@
   "flavorDownloaderTeardownInterval" : 15000,
   "logLevel" : "DEBUG",
   "logToConsole" : false,
-  "logFileName" : "~/dvr/kDvrWorker.log",
+  "logFileName" : "~/dvr/kLiveController.log",
   "monitorPort": 4390,
   "regressionAdapter": {
       "enable":false
