--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "forever": "0.15.2",
     "glob": "7.0.5",
     "log4js": "0.6.37",
-    "m3u8": "git://github.com/eladBenedict/node-m3u8.git#master",
     "mkdirp": "0.5.1",
     "nconf": "0.8.4",
     "q": "1.4.1",
@@ -37,6 +36,7 @@
     "request": "^2.61.0",
     "shelljs": "0.7.0",
     "touch": "1.0.0",
+    "chunked-stream": "0.0.2",
     "underscore": "1.8.3",
     "v8-profiler": "5.6.5"
   }
