Fix PLAT-5827: Supporting audio only streams, and insert minor changes

--- a/packager/config/nginx.conf.template
+++ b/packager/config/nginx.conf.template
@@ -46,16 +46,16 @@ http {
         #HLS
 
         #Rules for requesting playlist from packager
-        rewrite  /kLive\/smil:(\w+)_(?:all|pass).smil\/playlist.m3u8           /hls/$1/playlist.json/master.m3u8 last;
-        rewrite  /kLive\/smil:(\w+)_(?:all|pass).smil\/([^\/]*(?:ts|m3u8).*)   /hls/$1/playlist.json/$2 last;
+        rewrite  /kLive\/smil:([01]_[^_]+)_[^.]+\.smil\/playlist.m3u8                  /hls/$1/playlist.json/master.m3u8 last;
+        rewrite  /kLive\/smil:([01]_[^_]+)_[^.]+\.smil\/([^\/]*(?:ts|m3u8).*)          /hls/$1/playlist.json/$2 last;
 
         #Rules if backend builds playlist
-        rewrite  /kLive\/smil:(\w+)_(?:all|pass).smil\/(.*)\/chunklist.m3u8    /hls/$1/playlist.json/index-s$2-v1-a1.m3u8 last;
-        rewrite  /kLive\/smil:(\w+)_(?:all|pass).smil\/(.*)\/(.*)(.ts|.m3u8)   /hls/$1/playlist.json/$3$4 last;
+        rewrite  /kLive\/smil:([01]_[^_]+)_[^.]+\.smil\/(.*)\/chunklist.m3u8           /hls/$1/playlist.json/index-s$2-v1-a1.m3u8 last;
+        rewrite  /kLive\/smil:([01]_[^_]+)_[^.]+\.smil\/([^\/]*)\/([^.]*)(.ts|.m3u8)   /hls/$1/playlist.json/$3$4 last;
 
         #HDS
-        rewrite  /kLive\/smil:(\w+)_(?:all|pass).smil\/manifest.f4m            /hds/$1/playlist.json/manifest.f4m last;
-        rewrite  /kLive\/smil:(\w+)_(?:all|pass).smil\/(.*).abst               /hds/$1/playlist.json/$2.abst last;
+        rewrite  /kLive\/smil:([01]_[^_]+)_[^.]+\.smil\/manifest.f4m                    /hds/$1/playlist.json/manifest.f4m last;
+        rewrite  /kLive\/smil:([01]_[^_]+)_[^.]+\.smil\/(.*).abst                       /hds/$1/playlist.json/$2.abst last;
 
 
         add_header 'Access-Control-Allow-Headers' 'Origin,Range';
