- add ability to transfer file from content dir via port 2000

--- a/packager/config/nginx.conf.template
+++ b/packager/config/nginx.conf.template
@@ -137,5 +137,10 @@ http {
 
         }
 
+        # fetch files from CONTENT_DIR
+        location / {
+            alias @CONTENT_DIR@;
+        }
+
     }
 }
