--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -4,6 +4,9 @@
   "readMockBackendResponseFromFile" : false,
   "rootFolderPath" : "~/dvr/dvrContentRootPath",
   "oldContentFolderPath" : "~/dvr/dvrOldContentRootPath",
+  "recordingFolderPath" : "~/dvr/recording",
+  "recordingUploaderFolderPath" : "~/dvr/recordingUploader",
+  "recordingTimeInverval" : "2000",
   "requestTimeout" : 20000,
   "flavorSuccessPollingInterval" : 2000,
   "flavorFailPollingInterval" : 10000,
