PLAT-5870: call updateStreamInfo every 5 min

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -16,6 +16,7 @@
   "minDurationForPlaybackInSec" : 30,
   "sessionDuration" : 180000,
   "apiUpdateInterval" : 60000,
+  "streaInfoUpdateInterval" : 300000,
   "flavorDownloaderTeardownInterval" : 15000,
   "logLevel" : "DEBUG",
   "logToConsole" : false,
