- preserveAllChunks option to keep all converted chunks instead of eraseing them.

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -52,6 +52,7 @@
     "maxAllowedPTSDrift": 1000,
     "timestampToleranceMs": 2,
     "humanReadable" : false,
+    "preserveAllChunks": false,
     "segmentDuration" : 10000,
     "enablePlaylistHistory": false
   }
