--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -52,7 +52,7 @@
     "maxAllowedPTSDrift": 1000,
     "timestampToleranceMs": 2,
     "humanReadable" : false,
-    "preserveAllChunks": false,
+    "preserveMP4Chunks": false,
     "segmentDuration" : 10000,
     "enablePlaylistHistory": false
   }
