--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "kLiveController",
   "version": "1.0.0",
   "repository": {
-      "type": "git",
-      "url": "https://github.com/kaltura/liveDVR"
-    },
-  "license": "",
+    "type": "git",
+    "url": "git+https://github.com/kaltura/liveDVR.git"
+  },
+  "license": "ISC",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-jshint": "~0.10.0",
@@ -22,7 +22,8 @@
     "proxyquire": "1.7.0",
     "tmp": "0.0.27",
     "rimraf": "2.4.3",
-    "chai-as-promised":"4.1.1"
+    "chai-as-promised":"4.1.1",
+    "grunt-execute": "^0.2.2"
   },
   "dependencies": {
     "curry": "1.2.0",
@@ -39,5 +40,19 @@
     "touch": "1.0.0",
     "underscore": "1.8.3",
     "v8-profiler": "5.6.5"
-  }
+  },
+  "description": "DVR implementation built on top of live streams",
+  "bugs": {
+    "url": "https://github.com/kaltura/liveDVR/issues"
+  },
+  "homepage": "https://github.com/kaltura/liveDVR#readme",
+  "main": "grunt-config.js",
+  "directories": {
+    "test": "tests"
+  },
+  "scripts": {
+    "test": "mocha"
+  },
+  "keywords": [],
+  "author": ""
 }
