--- a/recordingUploader/config.ini
+++ b/recordingUploader/config.ini
@@ -1,8 +1,18 @@
 [default_config]
-queue_size=10
-recording_uploader_path = /Users/ron.yadgar/dvr/recordingUploader
+max_jobs_count=10
+concat_task = /Users/ron.yadgar/dvr/recordingUploader/concat_task
+concat_task_processing = /Users/ron.yadgar/dvr/recordingUploader/concat_task_processing
+concat_task_done = /Users/ron.yadgar/dvr/recordingUploader/concat_task_done
 recording_archive = /Users/ron.yadgar/dvr/recording_archive
+upload_task_processing = /Users/ron.yadgar/dvr/recordingUploader/upload_task_processingmd
+upload_task_done = /Users/ron.yadgar/dvr/recordingUploader/upload_task_done
 ffmpeg_path = /opt/kaltura/ffmpeg
 output_file_name = file.mp4
-polling_interval = 1
-concat_processors = 4
+polling_interval = 3
+concat_processors_count = 4
+uploading_processors_count = 1
+mode = saas
+# Mode is choose between ecdn and saas
+upload_token_buffer_size = 10
+#in MB
+num_of_thread = 2
