kLiveController service now installs node version if it doesn't exists. Logs are displayed in GMT time.

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -21,6 +21,7 @@
   "logLevel" : "DEBUG",
   "logToConsole" : false,
   "logFileName" : "~/dvr/kLiveController.log",
+  "logTimeZoneOffset" : 300,
   "monitorPort": 4390,
   "regressionAdapter": {
       "enable":false
