support configuration update for recording and regression
New module added: /lib/Adapters/RegressionAdapter/RegressionConfig.js.
Manipulation is done by updating LiveContoller configuration, based on
command line args. The new module contains singleton class,
RegressionConfig.
Every module that uses Configuration.js after AdapterFactory.js creates
RegressionConfig’s instance (regression.RegressionConfig.instance,
either receives original configuration (if no regression/record args
are included in process.argv), or updated values.

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -22,6 +22,7 @@
   "logFileName" : "~/dvr/kLiveController.log",
   "monitorPort": 4390,
   "preserveOriginalHLS": false,
+  "recordingDurationMinutes": 5,
   "regressionAdapter": {
       "enable":false,
       "dataWarehouseRootFolderPath" : "instructions: put here root path to data warehouse (e.g. /var/tmp/regression/data_warehouse)",
@@ -30,7 +31,6 @@
             "entryId": "abc",
             "flavorParamsIds": "32",
             "serverType": 0,
-            "firstChunklistIndex" : 0,
             "entryPath": "instructions: put here the relative path from data warehouse root to entry stream data (e.g. abc)",
             "playWindow": 150,
              "validator": {
