update of regression configuration && unit tests && issues fixing
Main changes:
1) Added support in multiple data warehouse for same entry. In command
line, using ‘override’ boolean flag (default , if not set is true). The
value in configuration template is ‘overrideOldRecordedHLS’.
2) replaced the usage of grunt-execute to run regression test as
execute:regression_test with mocha test (regression-spec.js,
regression-tests-config.js, regression-tests-task.js). - testing in
progress.
3) fixed edge case of failing regression tests if data warehouse is
empty.

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -23,6 +23,7 @@
   "monitorPort": 4390,
   "preserveOriginalHLS": false,
   "recordingDurationMinutes": 5,
+  "overrideOldRecordedHLS": true,
   "regressionAdapter": {
       "enable":false,
       "dataWarehouseRootFolderPath" : "instructions: put here root path to data warehouse (e.g. /var/tmp/regression/data_warehouse)",
