--- a/package.json
+++ b/package.json
@@ -6,23 +6,25 @@
     "url": "git+https://github.com/kaltura/liveDVR.git"
   },
   "devDependencies": {
+    "chai": "^3.2.0",
+    "chai-as-promised": "4.1.1",
+    "chai-http": "^1.0.0",
     "grunt": "~0.4.5",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.1",
-    "matchdep": "~0.3.0",
+    "grunt-execute": "^0.2.2",
+    "grunt-mocha-istanbul": "3.0.1",
     "grunt-mocha-test": "0.9.3",
+    "istanbul": "0.3.18",
     "jshint-junit-reporter": "0.0.6",
+    "matchdep": "~0.3.0",
+    "mocha": "2.2.5",
     "mocha-html-reporter": "0.0.1",
+    "proxyquire": "1.7.0",
+    "rimraf": "2.4.3",
     "sinon": "1.9.0",
     "sinon-chai": "2.5.0",
-    "mocha": "2.2.5",
-    "istanbul": "0.3.18",
-    "grunt-mocha-istanbul": "3.0.1",
-    "proxyquire": "1.7.0",
-    "tmp": "0.0.27",
-    "rimraf": "2.4.3",
-    "chai-as-promised":"4.1.1",
-    "grunt-execute": "^0.2.2"
+    "tmp": "0.0.27"
   },
   "dependencies": {
     "curry": "1.2.0",
