--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,9 @@ node_modules
 # Build files created by node-gyp
 node_addons/FormatConverter/build
 
+# packager ignore directories
 common/config/config.json
 packager/build
+
+# grunt results ignore directory
+reports
