--- a/recordingUploader/config.ini
+++ b/recordingUploader/config.ini
@@ -4,15 +4,19 @@ concat_task = /Users/ron.yadgar/dvr/recordingUploader/concat_task
 concat_task_processing = /Users/ron.yadgar/dvr/recordingUploader/concat_task_processing
 concat_task_done = /Users/ron.yadgar/dvr/recordingUploader/concat_task_done
 recording_archive = /Users/ron.yadgar/dvr/recording_archive
-upload_task_processing = /Users/ron.yadgar/dvr/recordingUploader/upload_task_processingmd
+upload_task_processing = /Users/ron.yadgar/dvr/recordingUploader/upload_task_processing
 upload_task_done = /Users/ron.yadgar/dvr/recordingUploader/upload_task_done
 ffmpeg_path = /opt/kaltura/ffmpeg
 output_file_name = file.mp4
 polling_interval = 3
-concat_processors_count = 4
-uploading_processors_count = 1
-mode = saas
+concat_processors_count = 2
+uploading_processors_count = 2
+mode = ecdn
 # Mode is choose between ecdn and saas
 upload_token_buffer_size = 10
 #in MB
-num_of_thread = 2
+num_of_thread = 1
+api_format = 2
+
+
+# tasks = { "concat": "/concat_task", "processors_count": 5}
