--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -28,11 +28,14 @@
   "overrideOldRecordedHLS": true,
   "regressionAdapter": {
       "enable":false,
+      "analysis": false,
       "dataWarehouseRootFolderPath" : "instructions: put here root path to data warehouse (e.g. /var/tmp/regression/data_warehouse)",
       "maxChunkCount": 10,
       "entries" : [{
             "entryId": "abc",
-            "flavorParamsIds": "32",
+            "flavorParamsIds": "1,2,3,4",
+            "start_chunklist_index": -1,
+            "end_chunklist_index": -1,
             "serverType": 0,
             "entryPath": "instructions: put here the relative path from data warehouse root to entry stream data (e.g. abc)",
             "playWindow": 150,
