added support in replacing wowza url for recording and more
1) support in replacing the wowzaUrl from command line (for recording)
2)support in set -first_chunklist_index and -last_chunklist_index for
regression
3) support in set -entryId and -flavors for regression (replacing -url)
fixed several additional issues.

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -35,7 +35,7 @@
             "entryId": "abc",
             "flavorParamsIds": "1,2,3,4",
             "start_chunklist_index": -1,
-            "end_chunklist_index": -1,
+            "last_chunklist_index": -1,
             "serverType": 0,
             "entryPath": "instructions: put here the relative path from data warehouse root to entry stream data (e.g. abc)",
             "playWindow": 150,
