--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,5 @@ node_modules
 node_addons/FormatConverter/build
 
 common/config/config.json
-packager/build
+packager/buildcommon/config/configMapping.json
+recordingUploader/configMapping.ini
