--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "request": "^2.61.0",
     "shelljs": "0.7.0",
     "touch": "1.0.0",
+    "chunked-stream": "0.0.2",
     "underscore": "1.8.3",
-    "v8-profiler": "5.6.5",
-    "child_process": "1.0.2"
+    "v8-profiler": "5.6.5"
   },
   "description": "DVR implementation built on top of live streams",
   "bugs": {
