1 0 recording refactor plat 5805 (#240)
* create recording manager

* update unit test

* lib/RecordingManager.js

* update

* update

* guy code review notes

* update

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -2,6 +2,11 @@
   "mockNetwork" : false,
   "mockBackend" : false,
   "readMockBackendResponseFromFile" : false,
+  "rootFolderPath" : "~/dvr/dvrContentRootPath",
+  "oldContentFolderPath" : "~/dvr/dvrOldContentRootPath",
+  "recordingFolderPath" : "~/dvr/recording",
+  "completedRecordingFolderPath" : "~/dvr/recordingUploader",
+  "recordingTimeInterval" : "60000",
   "rootFolderPath" : "~/kLive_content/live",
   "oldContentFolderPath" : "~/kLive_content/archive",
   "requestTimeout" : 20000,
