Analyzer ignore alerts can be set in configuration and command line
command line argument: -analyzer_ignore_alerts (e.g.
-analyzer_ignore_alerts="'INFTagDurationDoesntMatch','BitrateOutsideOfTa
rgetAlert'")
configuration property: "analyzerAlertsIgnoreList”.
example: "analyzerAlertsIgnoreList":
"'INFTagDurationDoesntMatch','BitrateOutsideOfTargetAlert'"

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -43,7 +43,8 @@
              "validator": {
                "path": "instructions: put here the root path to save and read regression results (e.g. /var/tmp/regression/results)",
                "override": false,
-               "history_count": 0
+               "history_count": 0,
+               "analyzerAlertsIgnoreList": "'INFTagDurationDoesntMatch','BitrateOutsideOfTargetAlert','InvalidKeyFrameIntervalAlert'"
              }
         }]
   },
