--- a/packager/config/nginx.conf.template
+++ b/packager/config/nginx.conf.template
@@ -43,26 +43,6 @@ http {
         #rewrite_log on;
         #error_log    /usr/local/nginx/logs/example.com.error.log debug;
 
-        #HDS
-        rewrite  /kLive\/smil:([01]_[^_]+)_[^.]+\.smil\/manifest.f4m                    /live/hds/$1/playlist.json/manifest.f4m last;
-        rewrite  /kLive\/smil:([01]_[^_]+)_[^.]+\.smil\/(.*).abst                       /live/hds/$1/playlist.json/$2.abst last;
-        rewrite  /kLive\/smil:([01]_[^_]+)_[^.]+\.smil\/frag-(.*)                       /live/hds/$1/playlist.json/frag-$2 last;
-
-        #HLS
-
-        #Rules for requesting playlist from packager
-        rewrite  /kLive\/smil:([01]_[^_]+)_[^.]+\.smil\/playlist.m3u8                  /live/hls/$1/playlist.json/master.m3u8 last;
-        rewrite  /kLive\/smil:([01]_[^_]+)_[^.]+\.smil\/([^\/]*(?:ts|m3u8).*)          /live/hls/$1/playlist.json/$2 last;
-
-        #Rules if backend builds playlist
-        rewrite  /kLive\/smil:([01]_[^_]+)_[^.]+\.smil\/(.*)\/chunklist.m3u8           /live/hls/$1/playlist.json/index-s$2-v1-a1.m3u8 last;
-        rewrite  /kLive\/smil:([01]_[^_]+)_[^.]+\.smil\/([^\/]*)\/([^.]*)(.ts|.m3u8)   /live/hls/$1/playlist.json/$3$4 last;
-
-
-        add_header 'Access-Control-Allow-Headers' 'Origin,Range';
-        add_header 'Access-Control-Expose-Headers' 'Server,Content-Length,Content-Range,Date';
-        add_header 'Access-Control-Allow-Methods' 'GET, HEAD, OPTIONS';
-        add_header 'Access-Control-Allow-Origin' '*';
 
         vod_last_modified 'Sun, 19 Nov 2000 08:52:00 GMT';
         vod_last_modified_types *;
@@ -73,6 +53,13 @@ http {
         vod_expires_live 30;
         vod_expires_live_time_dependent 3;
         vod_live_window_duration 0;
+        vod_hls_absolute_master_urls off;
+        vod_hls_absolute_index_urls off;
+        vod_hls_output_id3_timestamps on;
+        vod_dash_manifest_format segmenttemplate;
+        vod_dash_profiles urn:mpeg:dash:profile:isoff-live:2011;
+        vod_hds_manifest_file_name_prefix manifest;
+        vod_hds_fragment_file_name_prefix frag;
 
 
         gzip  on;
@@ -85,33 +72,28 @@ http {
             return 200 "Kaltura";
         }
 
-        location /live/hls/ {
-             vod hls;
-             alias @CONTENT_DIR@;
-             vod_hls_absolute_master_urls off;
-             vod_hls_absolute_index_urls off;
-             vod_hls_output_id3_timestamps on;
+
+        location ~ /live/hls/p/\d+/entryId/(?<entryId>[^/]+)/(playlist/(?<playlist>[^/]+)/)? {
+            include nginx.conf.live.bootstrap;
+            vod hls;
         }
 
-        location /live/hds/ {
-             vod hds;
-             alias @CONTENT_DIR@;
-             vod_hds_manifest_file_name_prefix manifest;
-             vod_hds_fragment_file_name_prefix frag;
+        location ~ /live/hds/p/\d+/entryId/(?<entryId>[^/]+)/(playlist/(?<playlist>[^/]+)/)?  {
+            include nginx.conf.live.bootstrap;
+            vod hds;
         }
 
-        location /live/dash/ {
+        location ~ /live/dash/p/\d+/entryId/(?<entryId>[^/]+)/(playlist/(?<playlist>[^/]+)/)? {
+            include nginx.conf.live.bootstrap;
             vod dash;
-            alias @CONTENT_DIR@;
-            vod_dash_manifest_format segmenttemplate;
         }
 
-        location /live/mss/ {
-             alias @CONTENT_DIR@;
-             vod mss;
-             vod_manifest_segment_durations_mode accurate;
+        location ~ /live/mss/p/\d+/entryId/(?<entryId>[^/]+)/(playlist/(?<playlist>[^/]+)/)? {
+            include nginx.conf.live.bootstrap;
+            vod mss;
         }
 
+        include nginx.conf.redirect.rules;
 
         location / {
             expires 1d;
