--- a/packager/config/nginx.conf.template
+++ b/packager/config/nginx.conf.template
@@ -62,7 +62,6 @@ http {
         vod_dash_manifest_format segmenttemplate;
         vod_dash_profiles urn:mpeg:dash:profile:isoff-live:2011;
 
-
         gzip  on;
         gzip_types application/vnd.apple.mpegurl video/f4m application/dash+xml text/xml;
 
@@ -73,7 +72,7 @@ http {
             return 200 "Kaltura";
         }
 
-        location ~ ^(?<tokenKey>/(scf|s/)?.*/\d+/entryId/(?<entryId>[^/]+)(/playlist/(?<playlist>[^/]+))?)(/token/(?<token>[^/]+))?/ {
+        location ~ ^(?<tokenKey>/(scf|s/)?.*/\d+/e/(?<entryId>[^/]+)(/playlist/(?<playlist>[^/]+))?)(/t/(?<token>[^/]+))?/ {
 
             secure_link $token;
             secure_link_md5 "test $scheme://$http_host$tokenKey";
@@ -83,7 +82,7 @@ http {
                 vod hls;
             }
 
-            location ~ /live/enc/hls/ {
+            location ~ /live/ehls/ {
                 include nginx.conf.live.bootstrap;
                 vod hls;
                 vod_secret_key "jKsf!hAuaJak $vod_suburi";
