add backslash for token

--- a/packager/config/nginx.conf.live.bootstrap.template
+++ b/packager/config/nginx.conf.live.bootstrap.template
@@ -11,7 +11,7 @@ if ($playlist = '') {
 alias @CONTENT_DIR@/$entryId/$playlist;
 
 
-add_header X-DEBUG-HEADER "entryId=$entryId; token=$token; key=$scheme://$http_host$tokenKey; host=$host; secure_link=$secure_link";
+add_header X-DEBUG-HEADER "entryId=$entryId; token=$token; key=$scheme://$http_host$tokenKey/; host=$host; secure_link=$secure_link";
 
 #if ($secure_link = "") {
 #    return 403 "Incorrect Url provided";
