--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -4,8 +4,8 @@
   "readMockBackendResponseFromFile" : false,
   "rootFolderPath" : "~/dvr/dvrContentRootPath",
   "oldContentFolderPath" : "~/dvr/dvrOldContentRootPath",
-  "recordingFolderPath" : "~/dvr/recording",
-  "completedRecordingFolderPath" : "~/dvr/recordingUploader",
+  "recordingFolderPath" : "~/dvr/recording/Open_sessions",
+  "completedRecordingFolderPath" : "~/dvr/recording/ConcatenationTask/incoming",
   "recordingTimeInterval" : "60000",
   "rootFolderPath" : "~/kLive_content/live",
   "oldContentFolderPath" : "~/kLive_content/archive",
