--- a/recordingUploader/config.ini
+++ b/recordingUploader/config.ini
@@ -1,22 +1,23 @@
 [default_config]
-max_jobs_count=10
-concat_task = /Users/ron.yadgar/dvr/recordingUploader/concat_task
-concat_task_processing = /Users/ron.yadgar/dvr/recordingUploader/concat_task_processing
-concat_task_done = /Users/ron.yadgar/dvr/recordingUploader/concat_task_done
-recording_archive = /Users/ron.yadgar/dvr/recording_archive
-upload_task_processing = /Users/ron.yadgar/dvr/recordingUploader/upload_task_processing
-upload_task_done = /Users/ron.yadgar/dvr/recordingUploader/upload_task_done
+max_task_count=10
+recording_base_dir = /Users/ron.yadgar/dvr/recording
 ffmpeg_path = /opt/kaltura/ffmpeg
 output_file_name = file.mp4
 polling_interval = 3
 concat_processors_count = 2
 uploading_processors_count = 1
-mode = ecdn
+mode = remote
 # Mode is choose between ecdn and saas
 upload_token_buffer_size = 6
 #in MB
-num_of_thread = 1
+num_of_thread =3
 api_format = 2
+session_duration = 86400
+# note that retry is shared between all tasks
+max_retry = 5
+failed_tasks_handling_interval = 1
+failed_tasks_max_retries = 4
+# in minutes
 
 
 # tasks = { "concat": "/concat_task", "processors_count": 5}
