--- a/common/config/configMapping.json
+++ b/common/config/configMapping.json
@@ -20,34 +20,33 @@
       "ksSessionRefreshIntervalMinutes" : 720
     },
     "preserveOriginalHLS": {
-      "enable": true,
+      "enable": false,
       "createFolderPerSession": true,
       "runDurationInMinutes": 5
     },
     "simulateStreams": {
-      "enable":true,
+      "enable":false,
       "count": 1,
-      "entryId": "1_exd8bai9",
-      "path": "1_exd8bai9_test_after_merge_120916",
+      "entryId": "1_oorxcge2",
       "playWindow": 7200,
       "maxChunkCount": 5,
       "useNginx":false,
-      "wowzaUrl": "http://kalsegsec-a.akamaihd.net:80/dc-1/m/ny-live-publish3/kLive/smil:1_i6ys8wtx_all.smil/playlist.m3u8"
+      "wowzaUrl": "http://kalsegsec-a.akamaihd.net/dc-0/m/pa-live-publish2/kLive/smil:1_oorxcge2_all.smil/playlist.m3u8"
     },
     "playlistConfig" : {
       "enablePlaylistHistory": false
     },
     "regressionAdapter": {
-      "enable": false,
-      "analysis": true,
+      "enable": true,
+      "analysis": false,
       "analyzerRootPath" : "/Users/lilach.maliniak/Desktop/dev/repositories/live-monitor",
       "dataWarehouseRootFolderPath" : "/Users/lilach.maliniak/Documents/tmp/DVR",
       "maxChunkCount": 5,
       "entries" : [{
-        "entryId": "1_exd8bai9",
+        "entryId": "1_oorxcge2",
         "flavorParamsIds": "1,2,3,4",
         "serverType": 0,
-        "entryPath": "1_exd8bai9_test_after_merge_120916-8",
+        "entryPath": "1_oorxcge2-3",
         "playWindow": 150,
         "start_chunklist_index": -1,
         "last_chunklist_index": -1,
@@ -55,7 +54,7 @@
           "path": "./reports",
           "override": false,
           "history_count": 0,
-          "analyzerAlertsIgnoreList": "'INFTagDurationDoesntMatch','BitrateOutsideOfTargetAlert','InvalidKeyFrameIntervalAlert','SegmentCountMismatchAlert'"
+          "analyzerAlertsIgnoreList": "'INFTagDurationDoesntMatch','BitrateOutsideOfTargetAlert','InvalidKeyFrameIntervalAlert','SegmentCountMismatchAlert','LatencyIsTooLongAlert'"
         }
       }]
     }
