avoiding mistakably commit local configuration file

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ packager/build
 # grunt results ignore directory
 #todo: remove or create dir in gruntfile
 reports
+
+common/config/configMapping.json
