updated implementation  - not tested yet
Main changes:
1) stopped entries are checked as part of controller’s main processing
loop.
2) PlaylistGenerator supports construction of stopped entries from
disk, (read playlist.json).
3) PlaylistGenerator, supports 2 properties for seamless failover, in
playlist.json:
 - (a) presentationEndTime, that signals end of stream if older than
now.
 - (b) expirationTime, if older than now, signals that stream no longer
provided by one DC, but is still alive.

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -24,6 +24,7 @@
   "logTimeZoneOffset" : 300,
   "monitorPort": 4390,
   "streamPersistenceTimerMSec": 60000,
+  "stoppedEntriesPath": "~/kLivePersistence",
   "regressionAdapter": {
       "enable":false
   },
