added verbose regression option and extended preservation params
Newly added verbose option enables save of packager chunk lists in the
regression result Json.
The newly added his preservation options will enable validation and fix
of data warehouse.

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -25,7 +25,8 @@
   "logTimeZoneOffset" : 300,
   "monitorPort": 4390,
   "regressionAdapter": {
-      "enable":false,
+      "verbose": false,
+      "enable": false,
       "analysis": false,
       "analyzerRootPath" : "~/live-monitor/",
       "dataWarehouseRootFolderPath" : "instructions: put here root path to data warehouse (e.g. /var/tmp/regression/data_warehouse)",
@@ -49,7 +50,10 @@
   "preserveOriginalHLS": {
       "enable": false,
       "createFolderPerSession": true,
-      "runDurationInMinutes": 5
+      "runDurationInMinutes": 5,
+      "validate": true,
+      "fix": true,
+      "prepareForRegression": true
   },
   "simulateStreams": {
       "enable":false,
