--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -19,8 +19,6 @@
   "streamInfoUpdateInterval" : 300000,
   "flavorDownloaderTeardownInterval" : 15000,
   "numOfManifestRetries" : 5,
-  "minChunkDurationInSec": 2,
-  "maxChunkDurationInSec": 15,
   "logLevel" : "DEBUG",
   "logToConsole" : false,
   "logFileName" : "~/dvr/kLiveController.log",
@@ -30,6 +28,8 @@
       "enable":false
   },
   "diagnostics": {
+      "minChunkDurationInMSec": 2000,
+      "maxChunkDurationInMSec": 15000,
       "errorsWindowSizeInMSec" : 360000,
       "ptsMaxMisalignmentAllowedInMSec" : 5000
   },
