--- a/recordingUploader/config.ini
+++ b/recordingUploader/config.ini
@@ -2,6 +2,9 @@
 max_task_count=10
 recording_base_dir = /Users/ron.yadgar/dvr/recording
 ffmpeg_path = /opt/kaltura/ffmpeg
+log_level : DEBUG
+log_to_console : false
+log_file_name : /var/log/recording_uploader.log
 output_file_name = file.mp4
 polling_interval = 3
 concat_processors_count = 2
