change recording path

--- a/recordingUploader/config.ini
+++ b/recordingUploader/config.ini
@@ -1,6 +1,6 @@
 [default_config]
 max_task_count=10
-recording_base_dir = /Users/ron.yadgar/dvr/recording
+recording_base_dir = /web/content/kLive/recording
 ffmpeg_path = /opt/kaltura/ffmpeg
 log_level : DEBUG
 log_to_console : false
