add log decorator

--- a/recordingUploader/config.ini
+++ b/recordingUploader/config.ini
@@ -3,7 +3,7 @@ max_task_count=10
 recording_base_dir = /web/content/kLive/recording
 ffmpeg_path = /opt/kaltura/ffmpeg
 log_level : DEBUG
-log_to_console : false
+log_to_console : True
 log_file_name : /var/log/recording_uploader.log
 output_file_name = file.mp4
 polling_interval = 3
