update according to Guy's notes

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -2,11 +2,6 @@
   "mockNetwork" : false,
   "mockBackend" : false,
   "readMockBackendResponseFromFile" : false,
-  "recordingFolderPath" : "~/dvr/recording/Open_sessions",
-  "completedRecordingFolderPath" : "~/dvr/recording/ConcatenationTask/incoming",
-  "recordingTimeInterval" : "60000",
-  "recordingMaxDuration" : "86400",
-  "recordingSessionDuration" : "180000",
   "rootFolderPath" : "~/kLive_content/live",
   "oldContentFolderPath" : "~/kLive_content/archive",
   "requestTimeout" : 20000,
@@ -28,7 +23,7 @@
   "logToConsole" : false,
   "logFileName" : "~/dvr/kLiveController.log",
   "logTimeZoneOffset" : 300,
-  "monitorPort": 4390,
+  "monitorPort": 4391,
   "regressionAdapter": {
       "enable":false
   },
@@ -69,5 +64,12 @@
     "preserveMP4Chunks": false,
     "segmentDuration" : 10000,
     "enablePlaylistHistory": false
-  }
+  },
+  "recording" : {
+       "recordingFolderPath" : "/web/content/kLive/recording/recordings",
+       "completedRecordingFolderPath" : "/web/content/kLive/recording/incoming",
+       "recordingTimeInterval" : "60000",
+       "recordingMaxDuration" : "86400",
+       "recordingSessionDuration" : "180000"
+     }
 }
